fix: add new logo into carousel and fix the jump problem

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ body {
         transform: translateY(-3px);
     }
 }
+
+@keyframes slide {
+    0% { 
+        transform: translateX(0) 
+    }
+    100% { 
+        transform: translateX(-50%) 
+    }
+}
